--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+ul{
+  padding: 0;
+}
 ul > li{
   list-style: none;
   padding: 0;
   margin: 0;
 }
+
 .demo-logo > h2 > a{
   background: url(https://github.com/yan-tingciou/goldeggphone/blob/main/images/3.png?raw=true) no-repeat ;
   width: 97px;
@@ -22,50 +26,188 @@ ul > li{
   margin: 0 5px;
   position: relative;
   text-decoration: none;
+  font-weight: bold;
   border-bottom: 3px solid transparent;
   transition: border-bottom 0.3s;
 }
 .link:hover{
   transition: all 0.5s;
   color: #ff8c00;
-  /* border-bottom: 5px solid #FFD1A4; */
 }
 .link.active{
   color: #ff8c00;
-  font-weight: bold;
   border-bottom: 4px solid #ff8c00;
+}
+.headerStyle{
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+@media (max-width: 690px){
+  .headerStyle{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .demo-logo {
+    margin: 0 auto;
+  }
+}
+.menu{
+  position: sticky;
+  top: 110px;
+  z-index: 100;
+  display: flex;
+  font-size: 16px;
+  padding: 0px;
+}
+.menu.small{
+  margin-top: -16px;
+}
+.menu-list {
+  font-size: 24px;
+  display: none;
+  color: #fff;
+}
+.menu-list:hover{
+  color: #ff8c00;  
+}
+
+@media (max-width: 690px){
+  .menu{
+    position: sticky;
+    top: 110px;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    background: #272727;
+  }
+  .menu-list{
+    order: 2;
+    display: block;
+    float: right;
+  }
+  .menu > li > a{
+    padding-top: 8px;
+    height: 42px;
+  }
 }
 
 .icon_fb:hover, .icon_line:hover{
   opacity: 60%;
 }
-.swiper {
-  max-width: 1100px;
-  position: relative;
-}
-.swiper-wrapper{
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-}
-.swiper-slide{
-  display: flex;
-}
-.swiper-slide img{
-  opacity: 40%;
-  display: block;
-  margin: 0 auto;
-  max-width: 100%;
-  aspect-ratio: 5/2;
-}
-.swiper h2{
-  position: absolute;
-  bottom: 70px;
-  display: block;
+
+.bgStyle{
   width: 100%;
-  background: rgba(213, 158, 111, .5);
-  padding: 20px;
-  z-index: 2;
-  font-size: 30px;
-  line-height: 1.5;
+	height: 600px;
+	object-fit: none;
 }
+.contentStyle{
+  min-height: 578px;
+  background: #fff;
+  padding: 30px;
+}
+@media (max-width: 690px){
+  .contentStyle{
+    padding: 10px;
+  }
+}
+
+/* service */
+.serviceUl > li {
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+  margin: 0 2%;
+  padding-bottom: 100px;
+}
+.serviceLiReverse{
+  flex-direction: row-reverse;
+}
+.serviceText{
+  margin: 0 2%;
+  margin-left: 2%;
+  width: 40%;
+}
+.servicePhoto{
+  height: 320px;
+}
+.serviceText > p {
+  font-size: 18px;
+}
+@media (max-width: 960px){
+  .serviceUl > li {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 30px;
+  }
+  .servicePhoto{
+    margin: 0 auto;
+  }
+  .serviceText{
+    display: block;
+    padding: 0 5%;
+    width: 100%;
+  }
+  .serviceText > p {
+    font-size: 16px;
+  }
+  .reverse{
+    flex-direction: column;
+  }
+}
+@media (max-width: 690px){
+  .servicePhoto{
+    height: 320px;
+    width: 100%;
+    object-fit: contain;
+  }
+}
+
+/* price */
+.columnBold{
+  font-weight: bold;
+}
+.priceBgColor{
+  background-color: #ff8c00;
+}
+.fontRed{
+  color: red;
+}
+.aboutText{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 2%;
+  padding-bottom: 100px;
+}
+.aboutText > p {
+  width: 50%;
+  margin: 0 1%;
+  font-size: 18px;
+}
+
+@media (max-width: 690px){
+  .aboutText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 2%;
+    padding-bottom: 100px;
+  }
+  .aboutText > p {
+    width: 98%;
+    margin-top: 20px;
+    font-size: 16px;
+  }
+  .aboutTextCenter{
+    text-align: center;
+  }
+}
+/* .aboutText > p.aboutTextCenter{
+  font-size: 16px;
+} */
