update-iphoneData.json

--- a/src/App.css
+++ b/src/App.css
@@ -208,3 +208,12 @@ ul > li{
     text-align: center;
   }
 }
+
+.seo-h1 {
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
